# swirl

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  default_swirl.param  pyproject.toml  upload_to_pip.sh
code/: __init__.py  cluster.py  evcmap.py  main.py  swirlingstrength.py  vortex.py
data/lamb_oseen/: lamb_oseen.param  vx.npy
data/multiple_vortices/: multiple_vortices.param  vx.npy  vy.npy
data/orszag_tang/: orszag_tang.param  vx.npy  vy.npy
example/: DoubleLambOseen.ipynb  Untitled.ipynb  example.ipynb  tutorial.ipynb
example/data/: lamboseen_vy.npy
src/swirl/: __init__.py  evcmap.py  swirlingstrength.py  vorticity.py
swirl/: __init__.py  cluster.py  evcmap.py  main.py  plots.py  rortex.py  swirlingstrength.py  utilities.py  utils.py  vortex.py  vorticity.py
tests/: lamb_oseen.npy  swirl_test.py  test_criteria.py  test_identification.py
